force-app/main/default/objects/Network_Response__c/Network_Response__c.object-meta.xml
<CustomObject>
    <label>Network Response</label>
    <nameField>
        <displayFormat>NR - {0000}</displayFormat>
        <label>Network Response Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Network Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>