force-app/main/default/objects/Network_Response__c/fields/Delivery_officer_knowledge__c.field-meta.xml
<CustomField>
    <fullName>Delivery_officer_knowledge__c</fullName>
    <inlineHelpText>Does the officer remember the delivery?</inlineHelpText>
    <label>Delivery officer knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Address_type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Recalls - safe dropped</fullName>
            </value>
            <value>
                <fullName>Recalls - delivered</fullName>
            </value>
            <value>
                <fullName>Cannot recall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>