force-app/main/default/objects/Network_Response__c/fields/Network_Comments__c.field-meta.xml
<CustomField>
    <fullName>Network_Comments__c</fullName>
    <inlineHelpText>What else can you tell us that we can relay to the customer?</inlineHelpText>
    <label>Network Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>