force-app/main/default/objects/Network_Response__c/fields/Network_Response__c.field-meta.xml
<CustomField>
    <fullName>Network_Response__c</fullName>
    <inlineHelpText>Most appropriate selection that relates to enquiry</inlineHelpText>
    <label>Network Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No trace</fullName>
            </value>
            <value>
                <fullName>Delivered as addressed to letterbox</fullName>
            </value>
            <value>
                <fullName>Delivered as address safe dropped</fullName>
            </value>
            <value>
                <fullName>Carded to local collection facility</fullName>
            </value>
            <value>
                <fullName>No further record of item</fullName>
            </value>
            <value>
                <fullName>Proof of delivery provided</fullName>
            </value>
            <value>
                <fullName>Addressed with staff</fullName>
            </value>
            <value>
                <fullName>Mail monitor in place</fullName>
            </value>
            <value>
                <fullName>MRS application rejected</fullName>
            </value>
            <value>
                <fullName>Mail being redirected/held</fullName>
            </value>
            <value>
                <fullName>No such address</fullName>
            </value>
            <value>
                <fullName>Looping Parcel</fullName>
            </value>
            <value>
                <fullName>Delivered to occupant/member of household</fullName>
            </value>
            <value>
                <fullName>Unable to isolate mail - Hotel</fullName>
            </value>
            <value>
                <fullName>Unable to isolate mail - Common mailbox</fullName>
            </value>
            <value>
                <fullName>Unable to isolate mail - Caravan park</fullName>
            </value>
            <value>
                <fullName>Unable to isolate mail - Other (list reason in notes)</fullName>
            </value>
            <value>
                <fullName>Rejected - Other (list reason in notes)</fullName>
            </value>
            <value>
                <fullName>Return To Sender</fullName>
                <label>Return to sender</label>
            </value>
            <value>
                <fullName>Deliver as Addressed</fullName>
                <label>Deliver as addressed</label>
            </value>
            <value>
                <fullName>Discard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>