force-app/main/default/objects/Network_Response__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Network Responses</relationshipLabel>
    <relationshipName>Network_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>